[gd_scene load_steps=5 format=3 uid="uid://cf4xbwi3ta2ie"]

[ext_resource type="Script" path="res://Game/Misc/Chat/chat.gd" id="1_x2hr5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7hd7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mrft6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3g3kq"]

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -832.0
offset_bottom = -456.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2hr5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 192.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Chatbox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Input" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_o7hd7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mrft6")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_3g3kq")
context_menu_enabled = false
virtual_keyboard_enabled = false

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="text_submitted" from="VBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
